No bug - Replace new Integer/Long/Boolean by *.valueOf
Change-Id: I307f5ec6aa1bdf8344a3da7b3cb4acfa6b28fc20
Signed-off-by: Dawid Pakuła <zulus@w3des.net>