@@ -253,7 +253,7 @@ public class OpenTypeHistory extends History implements IShutdownListener {
 		// Fetching the timestamp might not be cheap (remote file system
 		// external Jars. So check if we alreay have one.
 		if (!fTimestampMapping.containsKey(info)) {
-			fTimestampMapping.put(info, new Long(getContainerTimestamp(info)));
+			fTimestampMapping.put(info, Long.valueOf(getContainerTimestamp(info)));
 		}
 		super.accessed(info);
 	}
@@ -265,7 +265,7 @@ public class OpenTypeHistory extends History implements IShutdownListener {
 
 	public synchronized void replace(TypeNameMatch old, TypeNameMatch newMatch) {
 		fTimestampMapping.remove(old);
-		fTimestampMapping.put(newMatch, new Long(
+		fTimestampMapping.put(newMatch, Long.valueOf(
 				getContainerTimestamp(newMatch)));
 		super.remove(old);
 		super.accessed(newMatch);
@@ -333,7 +333,7 @@ public class OpenTypeHistory extends History implements IShutdownListener {
 						replace(type, SearchEngine.createTypeNameMatch(jType,
 								modifiers));
 					} else {
-						fTimestampMapping.put(type, new Long(currentTimestamp));
+						fTimestampMapping.put(type, Long.valueOf(currentTimestamp));
 					}
 				}
 			} catch (ModelException e) {
@@ -430,7 +430,7 @@ public class OpenTypeHistory extends History implements IShutdownListener {
 			}
 		}
 		if (timestamp != IResource.NULL_STAMP) {
-			fTimestampMapping.put(info, new Long(timestamp));
+			fTimestampMapping.put(info, Long.valueOf(timestamp));
 		}
 		return info;
 	}
