@@ -548,7 +548,7 @@ public class TypeInfoViewer {
 						.format(DLTKUIMessages.TypeInfoViewer_progress_label,
 								new Object[] {
 										fName,
-										new Integer(
+										Integer.valueOf(
 												(int) ((fWorked * 100) / fTotalWork)) });
 			}
 		}
